--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "val",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "mysql2": "^3.1.0",
     "sequelize": "^6.28.0"
