Combinaison de getters et setters : compressed with zlib

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "mysql2": "^3.1.0",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "zlib": "^1.0.5"
   }
 }
